--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -63,13 +63,7 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
           >
         </div>
         {% endif %}
-    </section>
-    <div>
-      <script
-        type="text/javascript"
-        src="//www.insights5.com/form/generate.js?id=6"
-      ></script>
-    </div>
+      </section>
 
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
@@ -78,6 +72,7 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
         </h4>
         {% endif %} {% include page__taxonomy.html %} {% include page__date.html
         %}
+        {% include /marketing/optin.html}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %} {% include
