--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -72,7 +72,7 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
         </h4>
         {% endif %} {% include page__taxonomy.html %} {% include page__date.html
         %}
-        {% include /marketing/optin.html}
+        {% include /marketing/optin.html %}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %} {% include
