removed margin around form

--- a/_includes/marketing/optin.html
+++ b/_includes/marketing/optin.html
@@ -1,8 +1,8 @@
 <style type="text/css" scoped>
   .mauticform_wrapper {
     max-width: 600px;
-    margin: 10px auto;
-    
+    margin: 0 0 40px 0;
+
   }
   .mauticform-innerform {
   }
