--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -70,9 +70,10 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
         <h4 class="page__meta-title">
           {{ site.data.ui-text[site.locale].meta_label }}
         </h4>
-        {% endif %} {% include page__taxonomy.html %} {% include page__date.html
-        %}
-        {% include /marketing/optin.html %}
+        {% endif %} {% include
+        /marketing/optin.html %}
+        {% include page__taxonomy.html %} 
+        {% include page__date.html %}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %} {% include
