changed styling of subtitle

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -30,6 +30,11 @@ body {
           flex-direction: column;
 }
 
+#page-subtitle{
+  color: $darkgray;
+  font-size: $type-size-5;
+}
+
 .initial-content,
 .search-content {
   flex: 1 0 auto;
