--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -24,7 +24,7 @@
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    <h3>{% if post.subtitle %}{{ post.subtitle }}{% endif %}</h3>
+    <h3 class="archive__item-subtitle no_toc" itemprop="headline">{% if post.subtitle %}{{ post.subtitle }}{% endif %}</h3>
     {% include page__meta.html type=include.type %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
