--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -40,7 +40,7 @@
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
-  }
+  } 
 }
 
 .archive__item-title {
@@ -49,6 +49,30 @@
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
+
+  a[rel="permalink"]::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  a + a {
+    opacity: 0.5;
+  }
+}
+
+.archive__item-subtitle {
+  margin-top: 0.1em;
+  margin-bottom: 0.25em;
+  font-family: $sans-serif-narrow;
+  line-height: initial;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: $darkgray;
+  font-size: $type-size-5;
 
   a[rel="permalink"]::before {
     content: '';
