--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -71,7 +71,7 @@
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
-  color: $darkgray;
+  color: $dark-gray;
   font-size: $type-size-5;
 
   a[rel="permalink"]::before {
