--- a/_includes/marketing/optin.html
+++ b/_includes/marketing/optin.html
@@ -1,61 +1,6 @@
-<!--<script type="text/javascript" src="//www.insights5.com/form/generate.js?id=8"></script>-->
-
-
-<style type="text/css" scoped>
-    .mauticform_wrapper { max-width: 600px; margin: 10px auto; }
-    .mauticform-innerform {}
-    .mauticform-post-success {}
-    .mauticform-name { font-weight: bold; font-size: 1.5em; margin-bottom: 3px; }
-    .mauticform-description { margin-top: 2px; margin-bottom: 10px; }
-    .mauticform-error { margin-bottom: 10px; color: red; }
-    .mauticform-message { margin-bottom: 10px;color: green; }
-    .mauticform-row { display: block; margin-bottom: 20px; }
-    .mauticform-label { font-size: 1.1em; display: block; font-weight: bold; margin-bottom: 5px; }
-    .mauticform-row.mauticform-required .mauticform-label:after { color: #e32; content: " *"; display: inline; }
-    .mauticform-helpmessage { display: block; font-size: 0.9em; margin-bottom: 3px; }
-    .mauticform-errormsg { display: block; color: red; margin-top: 2px; }
-    .mauticform-selectbox, .mauticform-input, .mauticform-textarea { width: 100%; padding: 0.5em 0.5em; border: 1px solid #CCC; background: #fff; box-shadow: 0px 0px 0px #fff inset; border-radius: 4px; box-sizing: border-box; }
-    .mauticform-checkboxgrp-row {}
-    .mauticform-checkboxgrp-label { font-weight: normal; }
-    .mauticform-checkboxgrp-checkbox {}
-    .mauticform-radiogrp-row {}
-    .mauticform-radiogrp-label { font-weight: normal; }
-    .mauticform-radiogrp-radio {}
-    .mauticform-button-wrapper .mauticform-button.btn-default, .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default { color: #5d6c7c;background-color: #ffffff;border-color: #dddddd;}
-    .mauticform-button-wrapper .mauticform-button, .mauticform-pagebreak-wrapper .mauticform-pagebreak { display: inline-block;margin-bottom: 0;font-weight: 600;text-align: center;vertical-align: middle;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 6px 12px;font-size: 13px;line-height: 1.3856;border-radius: 3px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
-    .mauticform-button-wrapper .mauticform-button.btn-default[disabled], .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] { background-color: #ffffff; border-color: #dddddd; opacity: 0.75; cursor: not-allowed; }
-    .mauticform-pagebreak-wrapper .mauticform-button-wrapper {  display: inline; }
-</style>
-<div id="mauticform_wrapper_generalnewsletterform" class="mauticform_wrapper">
-    <form autocomplete="false" role="form" method="post" action="https://www.insights5.com/form/submit?formId=8" id="mauticform_generalnewsletterform" data-mautic-form="generalnewsletterform" enctype="multipart/form-data" style="color: #fff;background-color:#ffa305;font-size: 15px;text-align: center;padding: 10px 28px;line-height: 1em;box-sizing: border-box;display: block;border-radius: 5px;box-shadow: none;">
-        <div class="mauticform-error" id="mauticform_generalnewsletterform_error"></div>
-        <div class="mauticform-message" id="mauticform_generalnewsletterform_message"></div>
-        <div class="mauticform-innerform">
-
-            
-          <div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
-
-            <div id="mauticform_generalnewsletterform_your_name" data-validate="your_name" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
-                <label id="mauticform_label_generalnewsletterform_your_name" for="mauticform_input_generalnewsletterform_your_name" class="mauticform-label">Your Name</label>
-                <input id="mauticform_input_generalnewsletterform_your_name" name="mauticform[your_name]" value="" class="mauticform-input" type="text">
-                <span class="mauticform-errormsg" style="display: none;">This is required.</span>
-            </div>
-
-            <div id="mauticform_generalnewsletterform_your_email" data-validate="your_email" data-validation-type="email" class="mauticform-row mauticform-email mauticform-field-2 mauticform-required">
-                <label id="mauticform_label_generalnewsletterform_your_email" for="mauticform_input_generalnewsletterform_your_email" class="mauticform-label">Your Email</label>
-                <input id="mauticform_input_generalnewsletterform_your_email" name="mauticform[your_email]" value="" class="mauticform-input" type="email">
-                <span class="mauticform-errormsg" style="display: none;">This is required.</span>
-            </div>
-
-            <div id="mauticform_generalnewsletterform_help_me_to_get_started_wi" class="mauticform-row mauticform-button-wrapper mauticform-field-3">
-                <button type="submit" name="mauticform[help_me_to_get_started_wi]" id="mauticform_input_generalnewsletterform_help_me_to_get_started_wi" value="" class="mauticform-button btn btn-default">Help me to get started with my business</button>
-            </div>
-            </div>
-        </div>
-
-        <input type="hidden" name="mauticform[formId]" id="mauticform_generalnewsletterform_id" value="8">
-        <input type="hidden" name="mauticform[return]" id="mauticform_generalnewsletterform_return" value="">
-        <input type="hidden" name="mauticform[formName]" id="mauticform_generalnewsletterform_name" value="generalnewsletterform">
-
-        </form>
+<div>
+  <script
+    type="text/javascript"
+    src="//www.insights5.com/form/generate.js?id=8"
+  ></script>
 </div>
