--- a/_includes/marketing/optin.html
+++ b/_includes/marketing/optin.html
@@ -2,8 +2,8 @@
 
 <style type="text/css" scoped>
   #optin {
-    color: black;
-    background-color: #faa51a;
+    color: white;
+    background-color: #4db541;
     font-size: 15px;
     text-align: center;
     padding: 10px 28px;
@@ -31,17 +31,8 @@
     color: whitesmoke;
     font-size: 10px;
   }
-  .mauticform-button {
-    font-size: 18px;
-    color: whitesmoke;
-    background-color: #f05245;
-    background-attachment: inherit;
-  }
-
-  .mauticform_wrapper form{
-    background-color: #faa51a;
-  }
 </style>
+
 <div id="optin">
   <h1>Start Your Business Today</h1>
   <h2>Get your hands dirty with the first class information from our newsletter</h2>
