--- a/_includes/marketing/optin.html
+++ b/_includes/marketing/optin.html
@@ -3,7 +3,7 @@
 <style type="text/css" scoped>
   #optin {
     color: white;
-    background-color: #4db541;
+    background-color: #f7931e;
     font-size: 15px;
     text-align: center;
     padding: 10px 28px;
