--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="nm5TmO-68XCVfmasmGQCgEIia48SiS3ENbWbINyRyzA" />
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
